Move airline down

--- a/evidence_correlatn_Tute/evidenceTutorial.html
+++ b/evidence_correlatn_Tute/evidenceTutorial.html
@@ -286,15 +286,6 @@ Alternative explanation: People who drive red cars may drive more quickly and/or
 In other words, 
         - selection bias, omitted variable, 
 --></li>
-<li>Driving a car is much more dangerous than flying in a commercial airliner <!--    Number of people who die per year in auto accidents is much larger than number who die in an airliner.
-But, that's not the relevant number. Instead, some *rate* of accidents is more relevant, because there are many more car trips than airline trips.
-It is irrational to fear flying a significant distance, if you are willing to drive that same distance without such trepidations, because your risk of injury or death is 10 to 40 times greater in an automobile than in an airliner, in the safer areas of the world. He found that over the fifteen years between 1975 and 1994, the death risk per flight was one in seven million. Barnett, judges the actual risk of one person being involved in a fatal airline accident, to be once every 19,000 years, provided he flew on an airliner once each day of those 19,000 years. He bases that estimate on what actually happened in the domestic U.S., during the 1990s. http://anxieties.com/flying-howsafe.php#.Vtd9ZJN97UI  http://airlinesafety.com/faq/FearFlying.htm
-Some graphs of airline fatalities (between a few hundred and a few thousand per year): http://edition.cnn.com/interactive/2014/07/travel/aviation-data/
-
-flying airliners (2004): 19.7 fatalities per million hours
-driving: .588 fatalities per million hours
-On this basis, flying has 21 times the number of fatal accidents and 33.5 times the number of fatalities per hour of operation. http://www.meretrix.com/~harry/flying/notes/safetyvsdriving.html
---></li>
 <li>Crystal meth (ice) is the drug of choice on the streets today. <!--Crystal meth.  How much police haul in each year.
 Poll on the streets. But will the people polled lie? Maybe they are biased to not admit meth is their favorite.
 The drug they buy may not be their top preference, because the drug bought is affected by availability, not just preference.  So maybe should ask them which they’d get if they could, the "drug of choice".--></li>
@@ -313,21 +304,25 @@ Alternatively,
 - Males may drive faster on average. In a sense that may make them "worse drivers" but if you somehow forced females to drive at the same speed, possibly they'd have *even more* accidents.
 - Males may drive more dangerous vehicles (perhaps trucks and sports cars somehow encourage accidents regardless of sex of the driver?
 --></li>
+<li>Driving a car is much more dangerous than flying in a commercial airliner <!--    Number of people who die per year in auto accidents is much larger than number who die in an airliner.
+But, that's not the relevant number. Instead, some *rate* of accidents is more relevant, because there are many more car trips than airline trips.
+It is irrational to fear flying a significant distance, if you are willing to drive that same distance without such trepidations, because your risk of injury or death is 10 to 40 times greater in an automobile than in an airliner, in the safer areas of the world. He found that over the fifteen years between 1975 and 1994, the death risk per flight was one in seven million. Barnett, judges the actual risk of one person being involved in a fatal airline accident, to be once every 19,000 years, provided he flew on an airliner once each day of those 19,000 years. He bases that estimate on what actually happened in the domestic U.S., during the 1990s. http://anxieties.com/flying-howsafe.php#.Vtd9ZJN97UI  http://airlinesafety.com/faq/FearFlying.htm
+Some graphs of airline fatalities (between a few hundred and a few thousand per year): http://edition.cnn.com/interactive/2014/07/travel/aviation-data/
+
+Also see http://www.meretrix.com/~harry/flying/notes/safetyvsdriving.html
+--> ### Remember</li>
 </ol>
-</div>
-<div id="remember" class="section level3">
-<h3>Remember</h3>
 <ul>
 <li>Experiment versus quasi-experiment versus simple correlation</li>
 <li>Quasi-experiments are sometimes referred to as natural experiments</li>
 <li>Only a controlled experiment can definitively establish causality</li>
 </ul>
-<!-- Extraneous variable
+<!-- IGNORE EVERYTHING BELOW
 
+Extraneous variable
 General term for a variable that changes concomitantly with the IV.
 
 Nuisance variable
-
 Variable that causes DV scores to be more variable
 
 ### Confounds versus noise-adding nuisances
