--- a/Vocab_ReadingsATHK2017statsAndStudies.html
+++ b/Vocab_ReadingsATHK2017statsAndStudies.html
@@ -125,7 +125,7 @@ $(document).ready(function () {
 <ul>
 <li><p>To find some definitions of the terms in this document, open <a href="https://raw.githubusercontent.com/alexholcombe/teachingATHK/master/Vocab_ReadingsATHK2017statsAndStudies.Rmd">Vocab_ReadingsATHK2017statsAndStudies.Rmd</a> and you’ll see definitions in the comments, and you’ll see definitions in the comments, embedded in “&lt;!– --&gt;”, something like <code>&lt;!--- comment text --&gt;</code>. Quiz yourself with this webpage that doesn’t show the definition, and subsequently check the definition in the .Rmd version to see if you got it right.</p></li>
 <li><p>Chapter 4, Correlation, of <em>Naked Statistics</em> (already assigned by Bruce)</p></li>
-<li><p>[Alex’s explanation]((<a href="https://alexholcombe.github.io/teachingATHK/controllingForVsControl.html" class="uri">https://alexholcombe.github.io/teachingATHK/controllingForVsControl.html</a>) of random assignment and its relation to “controlling for” in regression, and someone else’s <a href="http://isps.yale.edu/node/16697">explanation of random assignment</a>.</p></li>
+<li><p><a href="https://alexholcombe.github.io/teachingATHK/readings/controllingForVsControl.html">Alex’s explanation</a> of random assignment and its relation to “controlling for” in regression, and someone else’s <a href="http://isps.yale.edu/node/16697">explanation of random assignment</a>.</p></li>
 <li><p><a href="http://www.statisticshowto.com/design-of-experiments/confounding-variable/">What is a confounding variable?</a></p></li>
 </ul>
 <!-- Critical Thinking, by Paul and Elder -->
