--- a/Vocab_ReadingsATHK2017ArgumentsThinking.html
+++ b/Vocab_ReadingsATHK2017ArgumentsThinking.html
@@ -185,7 +185,8 @@ Therefore, Socrates is mortal."
 <li><p><a href="https://en.wikipedia.org/wiki/No_true_Scotsman">No true Scotsman</a> <!-- No true Scotsman. An "ad hoc rescue" of a refuted generalization attempt--></p></li>
 <li>Confirmation bias</li>
 <li>Soldier mind</li>
-<li><p>My-side bias <!-- Confirmation bias, soldier mind, and my-side bias are practically synonyms --></p></li>
+<li>My-side bias <!-- Confirmation bias, soldier mind, and my-side bias are practically synonyms --></li>
+<li><p><a href="https://alexholcombe.github.io/teachingATHK/readings/motivatedCognition.html">Motivated cognition</a></p></li>
 </ul>
 <p>More to come</p>
 <hr />
