--- a/readings/controllingForVsControl.html
+++ b/readings/controllingForVsControl.html
@@ -118,8 +118,21 @@ $(document).ready(function () {
 </div>
 
 
-<div id="controlling-for-in-an-observational-study-versus-control-in-an-experiment" class="section level3">
-<h3>“Controlling for” in an observational study versus “control” in an experiment</h3>
+<div id="ways-the-word-control-is-used-in-research-and-experiment-design" class="section level1">
+<h1>Ways the word “control” is used in research and experiment design</h1>
+<p>The word can mean different things even when the term used sounds almost the same.</p>
+<div id="control-groups" class="section level2">
+<h2>Control groups</h2>
+<p>A control group is the group in an experiment that does not receive treatment by the researchers and is then used as a benchmark to measure how the other tested subjects do.</p>
+<p>To many modern English speakers, this use of the word “control” is not intuitive. The term “control group” dates from an old meaning of the word “control”, to check, which is still the predominant meaning in languages such as German.</p>
+<p>That meaning of “control” survived in modern English usage in the “Passport Control” facilities at airports, where passports are checked, not controlled. So, when you hear “control experiment”, it may help to think “Passport Control”. The control experiment is a check that the independent variable is responsible for the outcome you are interested in.</p>
+</div>
+<div id="the-independent-variable-of-an-experiment-is-controlled." class="section level2">
+<h2>The independent variable of an experiment is controlled.</h2>
+<p>In an experiment, the independent variable is literally (in the modern English sense) controlled by the experimenter. That is, it is manipulated. If there are two groups in the experiment, that leads to what you can call the “experimental group” and the “control group”.</p>
+</div>
+<div id="controlling-for-in-an-observational-study" class="section level2">
+<h2>“Controlling for” in an observational study</h2>
 <p>In an observational study, <strong>“controlling for”</strong> a variable (also “adjusting for” and “taking into account”) is used to describe how in multivariate regression, a variable’s effect is examined and discounted to reveal the effect of the variable of interest. It’s not literally control, because it’s a statistical trick, not actual manipulation of the variable. It is necessary because in an observational study, it’s impossible to ensure that the data points with the different levels of the X variable do not also differ on some other factor Z.</p>
 <p>For example, if one wants to look at the effect on cancer rates (Y) of different amounts of fast food consumption (X), it’s impossible to ensure that the people who ate lots of fast food and the people who didn’t were equivalent on other factors (Zs) such as amount of exercise, gender, race, alcohol intake, etc. These alternative factors may be responsible for any difference in obesity between fast food abstainers and fast food frequenters. So we have to use the statistical trick of “controlling for”. But this has problems, as described in Alex’s lectures 2 and 3.</p>
 <p>In an experiment, we literally do <strong>control</strong> a variable. In rats for example, we could manipulate the proportion of fast food in their diet.</p>
@@ -127,6 +140,11 @@ $(document).ready(function () {
 <p>A naive approach would be to order, say, 10 batches of 10 rats and give the first five batches that we receive the fast food and following that, do the study on the remaining five batches with no fast food. <em>Do you see any problem with this?</em></p>
 <p>A first problem is that the first batches of rats might conceivably be different from the last batches of rats. It is conceivable that the first batches of rats were exposed to more carcinogens prior to their arrival to your laboratory than were the last batches of rats. For example, the rat breeder might have started cleaning the rat cages with a somewhat carcinogenic cleaner, after shipping the first batches of rats. That would be a confounding variable. A confounding variable might also occur due to you conducting the study with the no fast food rats after you conducted the study with the first, fast food rats. Maybe it is getting more toward summer as the study goes on, and the later (fast food) rats will then be exposed more to the ultraviolet rays of the sun (if you have a window in your laboratory), which can cause cancer.</p>
 <p>To address this, experimenters use <strong>randomization</strong>. The rats are randomly assigned to the fast food feeding and no fast food groups. This, on average, will balance the extraneous variables, such as carcinogen exposure, across the two groups.</p>
+</div>
+<div id="controlled-variables-that-arent-the-independent-variable-and-arent-the-previous-category-of-statistically-controlled-variables" class="section level2">
+<h2>“Controlled variables” that aren’t the independent variable, and aren’t the previous category of statistically controlled variables</h2>
+<p>The term “controlled variables” is often used for quantities that a scientist wants to be constant in the two groups. For the fast-food experiment on rats, a good researcher will ensure that before the experiment commenced, both groups of rats had the same diet. If you did not, one of the possible explanations of a difference in cancer rate would be difference in amount of carcinogens ingested before the experiment began. Similarly, during the actual experiment, amount of UV light exposure should “be controlled” - both groups of rats should get the same amount of exposure to sunlight.</p>
+</div>
 </div>
 
 
