--- a/readings/controllingForVsControl.html
+++ b/readings/controllingForVsControl.html
@@ -128,11 +128,11 @@ $(document).ready(function () {
 <p>That meaning of “control” <a href="https://forum.wordreference.com/threads/passport-control.2188162/">survived in modern English usage</a> in the “Passport Control” facilities at airports, where passports are checked, not controlled. So, when you hear “control experiment”, it may help to think “Passport Control”. The control experiment is a check that the independent variable is responsible for the outcome you are interested in.</p>
 </div>
 <div id="the-independent-variable-of-an-experiment-is-controlled" class="section level2">
-<h2>The independent variable of an experiment is controlled</h2>
+<h2>The independent variable of an experiment is <em>controlled</em></h2>
 <p>In an experiment, the independent variable is literally (in the modern English sense) controlled by the experimenter. That is, it is manipulated. If there are two groups in the experiment, that leads to what you can call the “experimental group” and the “control group”.</p>
 </div>
 <div id="controlling-for-in-an-observational-study" class="section level2">
-<h2>“Controlling for” in an observational study</h2>
+<h2><em>Controlling for</em> in an observational study</h2>
 <p>In an observational study, <strong>“controlling for”</strong> a variable (also “adjusting for” and “taking into account”) is used to describe how in multivariate regression, a variable’s effect is examined and discounted to reveal the effect of the variable of interest. It’s not literally control, because it’s a statistical trick, not actual manipulation of the variable. It is necessary because in an observational study, it’s impossible to ensure that the data points with the different levels of the X variable do not also differ on some other factor Z.</p>
 <p>For example, if one wants to look at the effect on cancer rates (Y) of different amounts of fast food consumption (X), it’s impossible to ensure that the people who ate lots of fast food and the people who didn’t were equivalent on other factors (Zs) such as amount of exercise, gender, race, alcohol intake, etc. These alternative factors may be responsible for any difference in obesity between fast food abstainers and fast food frequenters. So we have to use the statistical trick of “controlling for”. But this has problems, as described in Alex’s lectures 2 and 3.</p>
 <p>In an experiment, we literally do <strong>control</strong> a variable. In rats for example, we could manipulate the proportion of fast food in their diet. If the two groups of rats were completely identical, that’s all that’s needed.</p>
@@ -142,7 +142,7 @@ $(document).ready(function () {
 <p>To address this, experimenters use <strong>randomization</strong>. The rats are randomly assigned to the fast food feeding and no fast food groups. This, on average, will roughly equate the extraneous variables, such as carcinogen exposure, across the two groups.</p>
 </div>
 <div id="controlled-variables-that-are-neither-the-independent-variable-nor-the-above-category-of-variables-statistically-controlled-for" class="section level2">
-<h2>“Controlled variables” that are neither the independent variable nor the above category of variables statistically “controlled for”</h2>
+<h2><em>Controlled variables</em> that are neither the independent variable nor the above category of variables statistically <em>controlled for</em></h2>
 <p>The term “controlled variables” is often used for quantities that a scientist wants to be constant in the two groups. For the fast-food experiment on rats, a good researcher will ensure that before the experiment commenced, both groups of rats had the same diet. If you did not, one of the possible explanations of a difference in cancer rate would be difference in amount of carcinogens ingested before the experiment began. Similarly, during the actual experiment, amount of UV light exposure should “be controlled” - both groups of rats should get the same amount of exposure to sunlight.</p>
 </div>
 </div>
