--- a/logic_arguments_Tutes/logic_arguments_tute2.html
+++ b/logic_arguments_Tutes/logic_arguments_tute2.html
@@ -290,19 +290,20 @@ Conclusion: therefore, we must do *it* now.
 </ol>
 <hr />
 <blockquote>
-<p>Most claims that Donald Trump makes about himself are false. Donald Trump said, “I have normal-sized fingers”. Therefore Donald Trump does not have normal-sized fingers.</p>
+<p>Almost all things that Donald Trump says about himself are false. Donald Trump said, “I have normal-sized fingers”. Therefore Donald Trump does not have normal-sized fingers.</p>
 </blockquote>
 <ol start="25" style="list-style-type: decimal">
 <li>Do the above sentences form a syllogism? _________________ <!-- No, because they are not deductive. They are inductive. They form an inductive argument.--> <!-- The first Clinton argument is a syllogism. The second one isn't because it relies on probabilistic support, indicated by "Most".--></li>
 </ol>
 <hr />
 </div>
-<div id="valid-is-to-strong-as-sound-is-to-cogent" class="section level3">
-<h3>Valid is to Strong as Sound is to Cogent</h3>
-<p>For <em>inductive</em> arguments, the term for logically consistent is <strong>strong</strong> rather than <strong>valid</strong>- “valid” is used only for deductive arguments. The counterpart to the term <em>sound</em> (in deduction, used for both the premises being true and the argument logically consistent) is “cogent” for induction. For an inductive argument to be cogent, both the premises must be true and the argument must be strong.</p>
+<div id="valid-is-to-strong-as-cogent-is-to-strong" class="section level3">
+<h3>Valid is to Strong as Cogent is to Strong</h3>
+<p>For <em>inductive</em> arguments, the term for logically consistent is <strong>cogent</strong> rather than <strong>valid</strong>- “valid” is used only for deductive arguments. The counterpart to the term <em>sound</em> (in deduction, used for both the premises being true and the argument logically consistent) is “strong” for induction. For an inductive argument to be strong, both the premises must be true and the argument must be cogent.</p>
 <ol start="26" style="list-style-type: decimal">
-<li>Returning to the Trump argument, is it <em>strong</em>? ____________ <!-- Yes --></li>
-<li>Is it <em>cogent</em>? ___________ <!-- Not sure --> <!-- The Trump argument is cogent and good if the premises are true. But possibly the first premise is not true.  --></li>
+<li>Returning to the Trump argument, is it <em>cogent</em>? ____________ <!-- Yes --></li>
+<li>Is it <em>strong</em>? ___________ <!-- Not sure 
+ The Trump argument is cogent and good if the premises are true. But possibly the first premise is not true.  --></li>
 </ol>
 <hr />
 <p>Whenever something refers to <strong>probable support</strong> rather than certainty, it is <strong>induction</strong>, not <strong>deduction</strong>. When science presents evidence, it almost never proves something (certainty), instead the best it can do is probable support. Most conclusions in science are therefore inductive.</p>
@@ -311,30 +312,28 @@ Conclusion: therefore, we must do *it* now.
 </blockquote>
 <ol start="28" style="list-style-type: decimal">
 <li><p>Is the above an <em>inductive</em> or a <em>deductive</em> argument? ______________________</p></li>
-<li>Is the above <em>strong</em>? ____________ <!-- Yes --></li>
-<li><p>Is it <em>cogent</em>? ___________ <!-- Yes  --></p></li>
+<li>Is the above <em>cogent</em>? ____________ <!-- Yes --></li>
+<li><p>Is it <em>strong</em>? ___________ <!-- Yes  --></p></li>
 </ol>
 <hr />
 <blockquote>
 <p>If you have prostate cancer, very likely the prostate-specific antigen (PSA) level in your blood will exceed 4.0 ng/mL. The doctor reports that your PSA level is 4.5 ng/mL. It is very likely that you have prostate cancer.</p>
 </blockquote>
 <ol start="31" style="list-style-type: decimal">
-<li>Is the conclusion <strong>strong</strong>? _________________<br />
+<li>Is the conclusion <strong>cogent</strong>? _________________<br />
 <!-- No, because the premises haven't said whether there are other ways that you can have an elevated PSA level.
 If there are other ways and they are sufficiently common, then the conclusion is false. 
 Making this mistake is analogous, in induction, to the fallacy of affirming the consequent in deduction.
 In Bruce's lectures he referred to humans' tendency to neglect the base rate of something. Here, people tend to neglect the possibility that the base rate of people even without cancer having >4.5 ng/mL might be high.
 --> <BR></li>
-<li>Is the conclusion cogent? __________________ <!--No, because it isn't strong. To be cogent, the argument must be strong AND the premises must be true. 
-<!-- Tell the students that not only is the argument unsound, but also the conclusion happens to be false.
+<li>Is the conclusion <strong>strong</strong>? __________________ <!--No, because it isn't cogent. To be strong, the argument must be cogent AND the premises must be true. 
+<!-- You could the students that not only is the argument not cogent, but also the conclusion happens to be false.
 Only about one in three men who have an elevated PSA level are found to have cancer (specifically, that subsequent biopsy finds malignancy).
 Like many other medical tests, the PSA test is unreliable.
 This is a big issue in medicine, such as whether regular screening should be recommended for breast cancer and prostate cancer. The false alarm rate can be high enough that the number of lives saved may be very small relative to the expense of the multiple tests done and the unnecessary surgeries that sometimes occur, which are themselves dangerous.
---></li>
+http://www.uptodate.com/contents/screening-for-prostate-cancer --></li>
 </ol>
-<!--http://www.uptodate.com/contents/screening-for-prostate-cancer -->
 <hr />
-<!--## Argument or explanation? -->
 </div>
 <div id="deduction-induction-and-informal-writing" class="section level3">
 <h3>Deduction, induction, and informal writing</h3>
@@ -346,15 +345,14 @@ This is a big issue in medicine, such as whether regular screening should be rec
 Turning the key in my car's ignition yields silence.
 Therefore, the battery is dead --> <BR><BR> 33. Premise: ____________________________________________________________________________________ <BR><BR> 34. Premise: ____________________________________________________________________________________ <BR><BR> 35. Conclusion: ____________________________________________________________________________________ <BR><BR> 36. Is the argument deductive or inductive? _______________________________ <BR><BR> 37. Is the argument sound? ____________________ 38. Are the premises true? ____________________</p>
 <p><BR><BR></p>
-<p>There are other explanations of the car being silent, so the argument is not sound.</p>
-<p>However while the argument as stated is deductive, in the real world few cause-&gt;effect relationships are not 1-to-1. For example, while the battery being dead is one cause of a car being silent, there are other possible causes.</p>
-<p>The writer of the argument probably is aware of there being other possible causes of the car being silent, but simply thinks they are much more unlikely than the possibility that the battery is dead. In other words, the writer may actually be reasoning inductively. Language is often used very messily. Humans!</p>
-<p>Rewrite the argument to make it clear it is inductive: <!-- If turning the key in the ignition yields silence, **very likely** the car battery is dead.
+<p>The premise that silence upon turning the key means the battery is dead is false - there are other possibilities, like that the battery is not connected. Because the premise is false, the argument is not sound, although it is valid.</p>
+<p>The argument about the car above, as stated, is deductive. However, the writer of the argument probably is aware that other things (like a disconnected battery) could explain the problem, but simply thinks they are much more unlikely than the possibility that the battery is dead. In other words, the writer may actually be reasoning inductively. Language is often used very messily. Humans!</p>
+<p>Rewrite the argument to make it clearly inductive: <!-- If turning the key in the ignition yields silence, **very likely** the car battery is dead.
 Turning the key in my car's ignition yields silence.
 Therefore, the battery very likely is dead --> <BR><BR> 39. Premise: ____________________________________________________________________________________ <BR><BR> 40. Premise: ____________________________________________________________________________________ <BR><BR> 41. Conclusion: ____________________________________________________________________________________ <BR><BR></p>
 <ol start="42" style="list-style-type: decimal">
-<li>Is the argument strong? NO / YES <!--Yes, the logic follows --></li>
-<li>Do you think the argument is cogent? NO / YES <!--Yes, from what I know about cars--></li>
+<li>Is the argument cogent? NO / YES <!--Yes, the logic follows --></li>
+<li>Do you think the argument is strong? NO / YES <!--Yes, as far as I know about cars--></li>
 </ol>
 <hr />
 </div>
@@ -366,9 +364,13 @@ Therefore, the battery very likely is dead --> <BR><BR> 39. Premise: ___________
 <ol style="list-style-type: lower-alpha">
 <li>The interests of all, whether high or low, are equal.</li>
 <li>The members of the working classes are citizens by nature and have the same rights as the rich.</li>
-<li>Public administration must duly and solicitously provide for the welfare and comfort of the working classes. d. The law of justice will be violated which ordains that each man shall have his due.</li>
+<li>Public administration must duly and solicitously provide for the welfare and comfort of the working classes.<br />
+</li>
+<li>Otherwise that law of justice will be violated which ordains that each man shall have his due.</li>
 </ol>
-<!--C  The indicator word “therefore” identifies the conclusion. The rest of the choices are premises. -->
+<!--C  The indicator word “therefore” identifies the conclusion. The rest of the choices are premises.
+The "otherwise" phrase is stated last but is nevertheless a premise that contributes to the conclusion, C
+-->
 <hr />
 <p>While the 19th-century British idealists read Hegel as an arch-metaphysician of the Absolute, modern Hegelians interpret their idol as a modest pragmatist, resolving metaphysical arguments in the practices of post-Wittgensteinian forms of life. That Hegel can be interpreted in such wildly contrary ways shows that his works are so obscurely written as to be worthless, since they are evidently elastic enough to fit any sort of philosophical agenda.</p>
 <ol style="list-style-type: lower-alpha">
@@ -377,16 +379,14 @@ Therefore, the battery very likely is dead --> <BR><BR> 39. Premise: ___________
 <li>Hegel can be interpreted in wildly contrary ways.</li>
 <li>Hegel’s works are so obscurely written as to be worthless.</li>
 </ol>
-<!--D. The word “since” is the indicator word showing a premise, and immediately preceding the “since” is the conclusion. The first sentence supports this conclusion by pointing out how Hegel is interpreted in varying ways.-->
+<!--D. The word “since” is the indicator word showing a premise, "shows" is an indicator word that helps signal the conclusion. The first sentence supports this conclusion by pointing out how Hegel is interpreted in varying ways.
+“Since” helps signal that the last phrase is not a conclusion but rather is a premise.
+"Hegel can be interpreted in wildly contrary ways", option C, is an intermediate conclusion from some of the premises that then leads to the final conclusion".
+-->
 <hr />
 <p>My character would never betray his old friend and superior officer. This plot twist is cheap and contrived. You need to rewrite this whole story, because if this goes on, I’m going to quit the show.</p>
 <p>Circle the main conclusion.</p>
 <!-- "You need to rewrite this whole story".   The indicator word “because” is the best clue to the overall point of the passage. -->
-<hr />
-<p>We need to bring our oldest, the teenager, to the phone store, since he can give us helpful advice about shopping for the best phone. And if he’s coming with us, then we can’t leave the baby at home with his young siblings. And both parents have to come to the store, since one of us is the authorized name on the account and has to be there to give permission for any changes to the account, and the other is the one shopping for a new phone. So the baby has to come to the phone store too.</p>
-<p>Circle the main conclusion. <!--  there are subconclusions, but arguably the final conclusion is marked by the indicator “so.”, 
-The baby has to come to the phone store.--></p>
-<hr />
 </div>
 <div id="begging-the-question-or-circularity" class="section level3">
 <h3>Begging the question or circularity</h3>
