--- a/Vocab_ReadingsATHKArgumentsThinking.html
+++ b/Vocab_ReadingsATHKArgumentsThinking.html
@@ -125,11 +125,11 @@ $(document).ready(function () {
 <h2>Important Readings</h2>
 <ul>
 <li><p>To find some definitions of the terms in the Vocabulary section, open <a href="https://raw.githubusercontent.com/alexholcombe/teachingATHK/master/Vocab_ReadingsATHK2017ArgumentsThinking.Rmd">Vocab_ReadingsATHK2017ArgumentsThinking.Rmd</a> and you’ll see definitions in the comments, embedded in “&lt;!– --&gt;”, something like <code>&lt;!--- comment text --&gt;</code>. Quiz yourself with this webpage that doesn’t show the definition, and subsequently check the definition in the .Rmd version to see if you got it right.</p></li>
-<li><p><em>The power of critical thinking</em> by Vaughn, Chapter 1, available in the “Ungrouped Readings” folder of Canvas (or Chapters 2 and 3 of Bassham et al.’s <em>Critical Thinking</em>)</p></li>
+<li><p><em>The power of critical thinking</em> by Vaughn, Chapter 1, available from the eReserve link at left of Canvas (or Chapters 2 and 3 of Bassham et al.’s <em>Critical Thinking</em>)</p></li>
 <li><p><a href="http://open.umn.edu/opentextbooks/BookDetail.aspx?bookId=457"><em>Introduction to Logic and Critical Thinking</em></a> by Van Cleave, Chapter 1, in particular 1.6 (Validity), 1.7 (Soundness), 1.8 (Deductive vs. inductive arguments), 1.9 (Missing premises)</p></li>
 <li><p>Common logic mistake associated with <a href="https://www.logicallyfallacious.com/tools/lp/Bo/LogicalFallacies/14/Affirming-the-Consequent">affirming the consequent</a></p></li>
 <li><p>Common logic mistake associated with <a href="https://www.logicallyfallacious.com/tools/lp/Bo/LogicalFallacies/77/Denying-the-Antecedent">denying the antecedent</a></p></li>
-<li><p><em>Think Critically</em> by Facione, Chapter 6: Evaluate the Credibility of Claims and Sources, available in the “Ungrouped Readings” folder of Canvas</p></li>
+<li><p><em>Think Critically</em> by Facione, Chapter 6: Evaluate the Credibility of Claims and Sources, available from the eReserve link at left of Canvas</p></li>
 </ul>
 <!-- Critical Thinking, by Paul and Elder -->
 <ul>
