--- a/Vocab_ReadingsATHKArgumentsThinking.html
+++ b/Vocab_ReadingsATHKArgumentsThinking.html
@@ -142,6 +142,7 @@ $(document).ready(function () {
 <ul>
 <li><p><em>The power of critical thinking</em> by Vaughn, Chapter 3.</p></li>
 <li><p><em>Critical thinking</em> by Bassham et al., Chapter 3. Basic logical concepts: deduction and induction.</p></li>
+<li><p><em>Critical thinking</em> by Bassham et al., Chapter on inductive reasoning (which is chapter 11 if you have the 4th edition)</p></li>
 </ul>
 </div>
 <div id="vocabulary" class="section level1">
