--- a/Vocab_ReadingsATHKstatsAndStudies.html
+++ b/Vocab_ReadingsATHKstatsAndStudies.html
@@ -384,6 +384,7 @@ $(document).ready(function () {
 <h2>Important Readings</h2>
 <ul>
 <li><p>To find definitions of some of the terms in this document, open <a href="https://raw.githubusercontent.com/alexholcombe/teachingATHK/master/Vocab_ReadingsATHK2017statsAndStudies.Rmd">Vocab_ReadingsATHK2017statsAndStudies.Rmd</a> and you’ll see definitions in the comments, embedded in “&lt;!– --&gt;”, yielding something like <code>&lt;!--- comment text --&gt;</code>. Quiz yourself with this webpage that doesn’t show the definition, and subsequently check the definition in the .Rmd version to see if you got it right.</p></li>
+<li><a href="https://www.npr.org/transcripts/178635250">Planet Money podcast</a> on causation and correlation</li>
 <li><p>Chapter 4, Correlation, of <em>Naked Statistics</em> (already assigned by Bruce)</p></li>
 <li><p>To understand how regression can “control for” an extraneous variable, read <em>Naked Statistics</em> Chapter 11 and the “Highly correlated explanatory variables” in Ch.12.</p></li>
 <li><p><a href="https://alexholcombe.github.io/teachingATHK/readings/controllingForVsControl.html">Alex on the ways the word “control” is used</a> and random assignment.</p></li>
