--- a/Vocab_ReadingsATHKstatsAndStudies.html
+++ b/Vocab_ReadingsATHKstatsAndStudies.html
@@ -379,7 +379,6 @@ $(document).ready(function () {
 </div>
 
 
-<p><a href="https://www.khanacademy.org/math/probability/scatterplots-a1/creating-interpreting-scatterplots/v/correlation-and-causality">Khan Academy</a> on correlation and causality.</p>
 <div id="important-readings" class="section level2">
 <h2>Important Readings</h2>
 <ul>
@@ -393,6 +392,10 @@ $(document).ready(function () {
 </ul></li>
 </ul></li>
 <li><p>Chapter 4, Correlation, of <em>Naked Statistics</em> (already recommended by Bruce)</p></li>
+<li><a href="https://www.khanacademy.org/math/probability/scatterplots-a1/creating-interpreting-scatterplots/v/correlation-and-causality">Khan Academy</a> on correlation and causality. Study questions:
+<ul>
+<li>Khan talks about an article that suggests that eating breakfast prevents obesity. He also suggests alternative causal models. Name one.</li>
+</ul></li>
 <li><p><a href="https://alexholcombe.github.io/teachingATHK/readings/controllingForVsControl.html">Alex on the ways the word “control” is used</a> and random assignment.</p></li>
 <li><p>Another <a href="http://isps.yale.edu/node/16697">explanation of random assignment</a>.</p></li>
 <li><p><a href="http://www.statisticshowto.com/design-of-experiments/confounding-variable/">What is a confounding variable?</a></p></li>
@@ -435,9 +438,9 @@ a "confound"--></li>
 <!--This was in Bruce and Alex's lectures and means a confound that you try to compensate for using statistics, to reveal the causal relationship between IV and DV without contamination by the confound. Usually happens in observational studies but can sometimes happen in experiments.
 Also explained in https://alexholcombe.wordpress.com/2016/02/03/problems-with-controlling-for-variables-quick-notes/-->
 <ul>
-<li>Controlled variable</li>
+<li>Controlled variable<br />
+<!--In the Evidence tutorial, we used this to mean a variable that you ensure does not differ between the two groups in a simple experiment. This is in distinction to the independent variable, which is a variable you do want to differ between the two groups--></li>
 </ul>
-<!--In the Evidence tutorial, we used this to mean a variable that you ensure does not differ between the two groups in a simple experiment-->
 </div>
 <div id="other-terms" class="section level3">
 <h3>Other terms</h3>
