--- a/Vocab_ReadingsATHKstatsAndStudies.html
+++ b/Vocab_ReadingsATHKstatsAndStudies.html
@@ -389,7 +389,7 @@ summary {
 <li><p><a href="https://alexholcombe.github.io/teachingATHK/readings/controllingForVsControl.html">Alex on the ways the word “control” is used</a> and random assignment.</p></li>
 <li><p>Another <a href="http://isps.yale.edu/node/16697">explanation of random assignment</a>.</p></li>
 <li><p><a href="http://www.statisticshowto.com/design-of-experiments/confounding-variable/">What is a confounding variable?</a></p></li>
-<li><p><a href="https://thenib.com/repeat-after-me/">Comic book</a> about p-hacking and publication bias and the “replication crisis”.</p></li>
+<li><p><a href="https://thenib.com/repeat-after-me/">Comic book</a> about p-hacking and publication bias and the “replication crisis” (for Week 9)</p></li>
 </ul>
 <!-- Critical Thinking, by Paul and Elder -->
 </div>
