fixed end date set

--- a/Vocab_ReadingsATHKArgumentsThinking.html
+++ b/Vocab_ReadingsATHKArgumentsThinking.html
@@ -398,7 +398,7 @@ summary {
 <li><p><em>Think Critically</em> by Facione, Chapter 6: Evaluate the Credibility of Claims and Sources, available from the eReserve link at left of Canvas</p></li>
 </ul>
 <!-- Critical Thinking, by Paul and Elder --></li>
-<li><p><a href="https://raw.githubusercontent.com/alexholcombe/teachingATHK/master/ArgumentsOverview.docx">Arguments overview</a></p></li>
+<li><p><a href="https://github.com/alexholcombe/teachingATHK/blob/master/ArgumentsOverview.docx?raw=true">Arguments overview</a></p></li>
 <li><p><a href="http://ideas.ted.com/why-you-think-youre-right-even-when-youre-wrong/">Galef on confirmation bias</a>, which she refers to as <strong>soldier mind</strong></p></li>
 </ul>
 </div>
